src/pages/rental/rental.css
.rental_container {
    width: 85%;
    height: 90%;
}

.rental_table {
    margin-top: 2em;
}

.rental_header {
    width: 100%;
    height: 50px;
    display: flex;
    justify-content: space-between;
}

.rental_header-button {
    height: 40px;
    background-color: cadetblue;
    border-color: cadetblue;
}

.rental_header-button:hover {
    background-color: rgb(110, 199, 202);
    border-color: rgb(110, 199, 202);
}

.rental_header-button:focus {
    border: 0px solid cadetblue;
    background-color: cadetblue;
}

.offcanvas-start {
    top: 50%;
    left: 50%;
    width: 320px;
    height: 500px;
    border-right: 1px solid rgba(0,0,0,.2);
}

.offcanvas.show {
    transform: translate(-50%, -50%);
}

.offcanvas-header {
    padding-bottom: 0px;
}

.offcanvas-backdrop {
    pointer-events: none;
}

.form_select {
    width: 100%;
    color: rgb(63, 63, 63);
}

.form-label {
    margin-top: 10px;
    font-size: 14px;
    color: gray;
}

.form-text {
    color: rgb(163, 163, 163);
    font-family: monospace;
    font-size: 11px;
    display: block;
}

.form-control {
    color: rgb(63, 63, 63);
}

.form_total {
    font-weight: 500;
    color: cadetblue;
    font-family: monospace;
}

.rental_button {
    width: 100%;
    margin-top: 1.5em;
}

.ph_body {
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
}
.ph_input {
    margin: 20px 0px 20px 0px;
    height: 33px;
}

.form-spinner {
    width: 20px;
    height: 20px;
    margin-left: 60px;
}

@media only screen and (max-width: 992px) {
    .rental_container {
        margin-top: 95px;
    }
} 

@media only screen and (max-width: 575px) {
    .rental_table {
        font-size: 10px;
    }
    .rental_header-button {
        height: 60%;
        font-size: 12px;
    }
}

@media only screen and (max-width: 400px) {
    .rental_container {
        width: 97%;
    }
    .rental_header {
        width: 95%;
    }
}

